deployment/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    env: development
