deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: url-parser
  namespace: development
  labels:
    app: url-parser
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    type: app
    service: url-parser
    app: url-parser
  type: NodePort
