deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: url-parser-ingress
  namespace: development
  labels:
    app: url-parser
    env: development
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: url-parser
              servicePort: 8080
